<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/button_back"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/white"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_back"/>
            <ImageView
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_order"/>
            <TextView
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"/>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/liner_address_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/button_address_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/address_admin"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />
        </LinearLayout>
        <TextView
            android:textSize="@dimen/sp_15"
            android:id="@+id/text_name_store"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="@dimen/sp_15"
            android:id="@+id/text_address_admin"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="@dimen/dp_300"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/button_address_client"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_address" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:text="@string/address_order"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text_name"
                        android:textSize="@dimen/sp_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="|"
                        android:textSize="@dimen/sp_14"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/text_phone"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:textSize="@dimen/sp_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/text_address"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_id"
                android:textSize="15sp"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/text_code"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"/>
            <TextView
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_order"
                android:textSize="@dimen/sp_15"/>
            <TextView
                android:layout_weight="2"
                android:id="@+id/text_order_time"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_type"
                android:textSize="@dimen/sp_15"/>
            <TextView
                android:id="@+id/text_payment_type"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cash"
                android:textSize="@dimen/sp_15"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_note_2"
                android:textSize="@dimen/sp_15"/>
            <TextView
                android:id="@+id/text_note"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"/>
        </LinearLayout>


        <TextView
            android:layout_marginTop="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_order_confirm"
            android:textSize="@dimen/sp_15"/>
        <LinearLayout
            android:layout_marginTop="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="5">
            <TextView
                android:layout_weight="1"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:textSize="@dimen/sp_12"/>
            <TextView
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textSize="@dimen/sp_12"/>
            <TextView
                android:layout_weight="1"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_gia"
                android:textSize="@dimen/sp_12"/>
            <TextView
                android:layout_weight="1"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_quantity"
                android:textSize="@dimen/sp_12"/>
            <TextView
                android:layout_weight="1"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thanh_tien"
                android:textSize="@dimen/sp_12"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_270"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_order_detail"/>
        <LinearLayout
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_revenue_total_price"
                android:textSize="@dimen/sp_15"/>
            <TextView
                android:id="@+id/text_total_price"
                android:textColor="@color/red"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"/>
            <TextView
                android:textColor="@color/red"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vnd"
                android:textSize="@dimen/sp_15"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>