<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Status Tabs -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            app:tabMode="fixed"
            app:tabGravity="fill"
            app:tabTextAppearance="?attr/textAppearanceBodySmall">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_cho_xac_nhan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cho_xac_nhan" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_cho_giao_hang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cho_giao_hang" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_dang_giao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dang_giao" />

        </com.google.android.material.tabs.TabLayout>

        <!-- Search Bar -->
        <androidx.appcompat.widget.SearchView
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_md"
            android:background="@drawable/custom_search"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_hint" />

        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="@dimen/spacing_sm"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_order_shipper" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>